--- a/app/assets/locales/fr.json
+++ b/app/assets/locales/fr.json
@@ -4,7 +4,7 @@
   'menuDesigner': 'Designer',
   'menuStylism': 'Stylisme',
   'menuContact': 'Contact',
-  'homeTitle': 'is the perfect complement for contemporary women.',
+  'homeTitle': 'est le complément parfait de la femme contemporaine.',
   'aboutTitle1': 'À propos de Siqueiros',
   'aboutTitle2': 'Responsabilité Sociale',
   'aboutText1': '<span>S</span><p>iqueiros est le complément parfait de la femme contemporaine, de celles qui marchent avec assurance. Avec de grands défis et de grandes ambitions. Et qui, dans une ambiance urbaine, connaissent l’importance d’une vie saine. Ce sont des femmes cultivées et conscientes de la société, qui marchent à travers le succès et qui croient qu’il n’existe pas de limites. Pour elles, Siqueiros offre des collections contemporaines et intelligentes qui redent plus pratique la vie de tout les jours. En fondant l’esthétique et les dernierès tendances de la mode dans la vie quotidienne. </p>',
