Commit #14 Locales and Images Test 2

--- a/app/assets/locales/es.json
+++ b/app/assets/locales/es.json
@@ -22,6 +22,6 @@
   'designerItem1a': 'Participación en la pasarela para la cena benéfica de la Cámara ItaloCostarricense “ Notte di moda, La Dolce Vita”. 2012',
   'designerItem1b': 'Pasarela Emerge Mercedes Benz Fashion Week San Jose 2014',
   'designerItem1c': 'Pasarela Emerge Mercedes Benz Fashion Week San Jose 2015',
-  'designerItem2a': 'Styling para seminario de fotografía de moda “Desde la toma hasta el producto final” de la Universidad Creativa impartivo por el fotógrafo Mato Farroni.',
+  'designerItem2a': 'Styling para seminario de fotografía de moda “Desde la toma hasta el producto final” de la Universidad Creativa impartivo por el fotógrafo argentino Mato Farroni.',
   'designerItem2b': 'Asistente de Styling y producción para revista Traffic.'
 }
