Commit #18 Shop and Stylism

--- a/app/assets/locales/en.json
+++ b/app/assets/locales/en.json
@@ -23,5 +23,8 @@
   'designerItem1b': 'Runway Emerge Mercedes Benz Fashion Week San Jose 2014',
   'designerItem1c': 'Runway Emerge Mercedes Benz Fashion Week San Jose 2015',
   'designerItem2a': 'Styling for Fashion Photography seminar “Desde la toma hasta el producto final” of Universidad Creativa given by Mato Farroni from Argentina.',
-  'designerItem2b': 'Styling and production assistant in Traffic Magazine.'
+  'designerItem2b': 'Styling and production assistant in Traffic Magazine.',
+  'stylingText': 'Styling in coolaboration with María José Chavarría. Photography: Mato Farroni, Daniel Mora.',
+  'collectionsSubtitle': 'About the Collection',
+  'comingSoon': 'Coming Soon'
 }
