--- a/app/assets/locales/es.json
+++ b/app/assets/locales/es.json
@@ -23,5 +23,8 @@
   'designerItem1b': 'Pasarela Emerge Mercedes Benz Fashion Week San Jose 2014',
   'designerItem1c': 'Pasarela Emerge Mercedes Benz Fashion Week San Jose 2015',
   'designerItem2a': 'Styling para seminario de fotografía de moda “Desde la toma hasta el producto final” de la Universidad Creativa impartivo por el fotógrafo argentino Mato Farroni.',
-  'designerItem2b': 'Asistente de Styling y producción para revista Traffic.'
+  'designerItem2b': 'Asistente de Styling y producción para revista Traffic.',
+  'stylingText': 'Styling en colaboración con María José Chavarría. Fotógrafo: Mato Farroni, Daniel Mora.',
+  'collectionsSubtitle': 'Acerca de la Colección',
+  'comingSoon': 'Pronto'
 }
