Commit#21 Traducción, Arreglo de CSS

--- a/app/assets/locales/en.json
+++ b/app/assets/locales/en.json
@@ -26,5 +26,7 @@
   'designerItem2b': 'Styling and production assistant in Traffic Magazine.',
   'stylingText': 'Styling in coolaboration with María José Chavarría. Photography: Mato Farroni, Daniel Mora.',
   'collectionsSubtitle': 'About the Collection',
-  'comingSoon': 'Coming Soon'
+  'comingSoon': 'Coming Soon',
+  'insulationText': 'This collection is inspired by the work of the artist Michael Kukla. His work is highlighted by the use of negative space , and uses organic cleaning and as an essential element the hexagon . He observed objects degradation by water and air. The collection hosts the cleanliness and clarity of the artist with simple lines playing with structure and fluidity. In addition, all garments are treated with natural products that make them hydrophobic. This repels water avoiding stains, spills and keeping the garment clean longer.',
+  'buttonMore': 'More'
 }
