--- a/app/assets/locales/es.json
+++ b/app/assets/locales/es.json
@@ -26,5 +26,7 @@
   'designerItem2b': 'Asistente de Styling y producción para revista Traffic.',
   'stylingText': 'Styling en colaboración con María José Chavarría. Fotógrafo: Mato Farroni, Daniel Mora.',
   'collectionsSubtitle': 'Acerca de la Colección',
-  'comingSoon': 'Pronto'
+  'comingSoon': 'Pronto',
+  'insulationText': 'La colección se encuentra inspirada en el trabajo del artista Michael Kukla. Su obra se resalta por el uso de espacios negativos, limpieza orgánica y utiliza como elemento esencial el hexágono. Observa la degradación de los objetos a causa del agua y el aire. La colección acoge la limpieza y la nitidez del artista con líneas simples jugando con estructura y fluidez. Además todas las prendas son tratadas con químicos naturales que las hacen hidrofóbicas. Esto repele el agua evitando manchas, derrames y manteniendo la prenda limpia por más tiempo.',
+  'buttonMore': 'Más'
 }
